--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@reduxjs/toolkit": "^2.4.0",
-    "@vercel/postgres": "^0.10.0",
-    "date-fns": "^4.1.0",
+    "lucide-react": "^0.465.0",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
